# drone

./: CMakeLists.txt  base.cpp  base.h  main.cpp  всякий хлам.txt
screenshotParser/: CMakeLists.txt  screenshotMakerUnix.cpp  screenshotMakerUnix.h  screenshotMakerWindows.cpp  screenshotMakerWindows.h  screenshotParser.cpp  screenshotParser.h
screenshotParser/imageParsers/: CMakeLists.txt  TablesParser.cpp  TablesParser.h  blank.cpp  blank.h  edgesdetector.cpp  edgesdetector.h  frameconstructor.cpp  frameconstructor.h  tableParser.cpp  tableParser.h  tableParserOcv.cpp  tableParserOcv.h
utils/: CMakeLists.txt  bitmap.cpp  bitmap.h  bmphelper.cpp  bmphelper.h  color.cpp  color.h  line.cpp  line.h  pixel.cpp  pixel.h  vector2.cpp  vector2.h
